--- a/styles/common/PopupCart.scss
+++ b/styles/common/PopupCart.scss
@@ -3,7 +3,7 @@
     min-width: 280px;
     width: 560px;
     padding: 30px 50px;
-    z-index: 9999;
+    z-index: 9999999;
     max-width: calc(100% - 100px);
     background: #F8F8F8;
     position: absolute;
