--- a/styles/common/PopupSupport.scss
+++ b/styles/common/PopupSupport.scss
@@ -7,7 +7,7 @@
     bottom: 30px;
     border-radius: 50px;
     z-index: 99999;
-    background: url(/static/images/photos/avatar.jpg) center;
+    background: url(/static/images/photos/supportManager.png) center;
     background-size: 150%;
     border: 4px solid white;
     cursor: pointer;
@@ -56,13 +56,15 @@
         display: none;
     }
     .head {
-        background: $primaryGreenColor;
+        background: url(/static/images/photos/supportManager.png) center 274px;
+        background-size: cover;
         width: 100%;
-        height: 152px;
-        padding: 0 32px;
+        height: 182px;
         font-weight: 500;
         color: white;
         font-size: 20px;
+        border-radius: 10px;
+        margin-top: -3px;
         @media(max-width: 375px) {
             margin-bottom: 20px;
         }
@@ -74,7 +76,7 @@
             margin-top: 16px;
             cursor: pointer;
             margin-top: 16px;
-            margin-right: 46px;
+            margin-right: 26px;
             padding: 3px;
             border-radius: 50%;
             margin-left: auto;
@@ -90,7 +92,6 @@
             padding: 16px 24px;
             border-radius: 10px;
             background: white;
-            margin-top: -70px;
             box-shadow: 0px 2px 6px #00103014;
             overflow-y: auto;
             max-height: calc(100% - 100px);
@@ -105,6 +106,7 @@
                 letter-spacing: -0.4px;
                 line-height: 1.2;
                 margin: 0;
+                padding-bottom: 8px;
             }
             .description {
                 color: #36424c;
@@ -136,6 +138,16 @@
                             height: 29px;
                         }
                     }
+                    a:nth-child(2) {
+                        svg {
+                            fill: #4a90e2
+                        }
+                    }
+                    a:last-child {
+                        svg {
+                            fill: #27a6e5;
+                        }
+                    }
                     svg {
                         width: 24px;
                         height: 24px;
@@ -155,7 +167,6 @@
                     align-items: center;
                     border: 1px solid #eee;
                     border-radius: 8px;
-                    margin-top: 10px;
                     input {
                         border: none;
                         height: 40px;
@@ -209,7 +220,6 @@
             padding: 16px 24px;
             border-radius: 10px;
             background: white;
-            margin-top: -70px;
             box-shadow: 0px 2px 6px #00103014;
             overflow-y: auto;
             max-height: calc(100% - 100px);
