--- a/styles/common/ModuleCartLine.scss
+++ b/styles/common/ModuleCartLine.scss
@@ -36,6 +36,7 @@
         flex-direction: column;
         justify-content: center;
         margin-left: 10px;
+        width: 80%;
     }
     .count {
         display: flex;
@@ -87,7 +88,8 @@
         font-size: 16px;
         color: $blackText;
         @media(max-width: 650px) {
-            display: none;
+            margin-left: auto;
+            margin-top: 10px;
         }
     }
 }
