--- a/styles/common/PopupSupport.scss
+++ b/styles/common/PopupSupport.scss
@@ -59,9 +59,9 @@
         transition-timing-function: ease-in-out;
         z-index: -1;
     }
-    &:hover::after {
-        opacity: .64;
-    }
+    // &:hover::after {
+    //     opacity: .64;
+    // }
 }
 
 .popup__support {
