--- a/styles/pages/page_faq.scss
+++ b/styles/pages/page_faq.scss
@@ -119,7 +119,7 @@ body {
             color: $primaryGreenColor;
         }
         ul {
-            padding-left: 0;
+            padding-left: 20px;
             li {
                 color: $primaryGreenColor;
                 p {
