Fixs, news layout start

--- a/styles/common/PopupSupport.css
+++ b/styles/common/PopupSupport.css
@@ -158,6 +158,7 @@
           box-shadow: 0px 2px 6px #00103014;
   overflow-y: auto;
   max-height: calc(100% - 100px);
+  margin-top: 32px;
 }
 
 .popup__support .content .main-container .title {
@@ -314,6 +315,8 @@
 .popup__support .content .mail-container {
   margin-left: 32px;
   margin-right: 32px;
+  margin-bottom: 32px;
+  margin-top: 32px;
   padding: 16px 24px;
   border-radius: 10px;
   background: white;
