Page news + fixs

--- a/styles/common/ModuleFooterMob.scss
+++ b/styles/common/ModuleFooterMob.scss
@@ -122,7 +122,7 @@ footer.mobile {
                         img,
                         svg {
                             opacity: .8;
-                            fill: $primaryGreenColor;
+                            // fill: $primaryGreenColor;
                         }
                     }
                 }
