--- a/styles/common/ModuleFooterPC.scss
+++ b/styles/common/ModuleFooterPC.scss
@@ -94,7 +94,7 @@ footer {
                         img,
                         svg {
                             opacity: .8;
-                            fill: $primaryGreenColor;
+                            // fill: $primaryGreenColor;
                         }
                     }
                 }
