--- a/styles/common/uikit.css
+++ b/styles/common/uikit.css
@@ -135,6 +135,10 @@ footer.mobile {
   content: "";
 }
 
+.swiper-container {
+  overflow: hidden;
+}
+
 .btn-product {
   border-radius: 50px;
   padding: 10px;
