--- a/styles/common/uikit.scss
+++ b/styles/common/uikit.scss
@@ -112,6 +112,10 @@ footer.mobile {
     }
 }
 
+.swiper-container {
+    overflow: hidden;
+}
+
 .btn-product {
     border-radius: 50px;
     padding: 10px;
