--- a/styles/common/ModuleHeaderMob.scss
+++ b/styles/common/ModuleHeaderMob.scss
@@ -213,7 +213,7 @@ header.mobile {
     }
     .mobile-menu {
         position: fixed;
-        height: 100%;
+        height: calc(100% - 60px);
         width: 100%;
         background: #fff;
         z-index: 9999999;
@@ -222,7 +222,6 @@ header.mobile {
         transition: height.2s;
         display: flex;
         flex-direction: column;
-        overflow-y: auto;
         .consultant-info {
             background: #f9f9f9;
             height: 60px;
