--- a/styles/pages/page_news.css
+++ b/styles/pages/page_news.css
@@ -9,6 +9,18 @@ h1.title {
   font-weight: bold;
 }
 
+@media (max-width: 992px) {
+  h1.title {
+    font-size: 36px;
+  }
+}
+
+@media (max-width: 394px) {
+  h1.title {
+    font-size: 28px;
+  }
+}
+
 .news-container .page__title {
   font-size: 60px;
   color: #323232;
