--- a/styles/pages/page_list.css
+++ b/styles/pages/page_list.css
@@ -253,4 +253,230 @@
     margin-top: 20px;
   }
 }
+
+.indexJoinBlock {
+  position: relative;
+  margin-top: 50px;
+}
+
+.indexJoinBlock .head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background: #fbfbfb;
+}
+
+.indexJoinBlock .head h1,
+.indexJoinBlock .head p {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.indexJoinBlock .head h1 {
+  text-transform: uppercase;
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+  .indexJoinBlock .head h1 {
+    font-size: larger;
+    line-height: 1.5;
+  }
+}
+
+.indexJoinBlock .head p {
+  max-width: 900px;
+  line-height: 1.5;
+  font-size: 16px;
+}
+
+.indexJoinBlock .withbg {
+  background: url(/static/images/photos/reg.jpg) no-repeat #000;
+  height: 610px;
+  max-height: 610px;
+  background-size: cover;
+  background-position: center;
+  margin-top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 768px) {
+  .indexJoinBlock .withbg {
+    max-height: 405px;
+  }
+}
+
+.indexJoinBlock .withbg button {
+  border: 8px solid #fff;
+  padding: 16px 56px;
+  color: #fff;
+  font-size: 64px;
+  cursor: pointer;
+  font-family: "Bebas Neue" !important;
+  text-transform: uppercase;
+  text-align: center;
+  display: block;
+  margin-bottom: auto;
+  background: transparent;
+  font-weight: lighter;
+  margin: 0 auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  font-weight: 100 !important;
+  -webkit-transition: opacity 0.4s;
+  transition: opacity 0.4s;
+}
+
+.indexJoinBlock .withbg button:hover {
+  opacity: .6;
+}
+
+@media (max-width: 768px) {
+  .indexJoinBlock .withbg button {
+    font-size: 32px;
+    border: 4px solid #fff;
+    padding-bottom: 11px;
+  }
+}
+
+.addresses {
+  margin-top: 100px;
+  color: #323232;
+  display: none;
+}
+
+.addresses .showAllOfficesTable {
+  color: #303030;
+  text-decoration: underline;
+  font-size: 14px;
+  font-weight: 500;
+  display: block;
+  text-align: center;
+  margin-top: 25px;
+}
+
+.addresses .table {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.addresses .table .line {
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: lighter;
+  border: 1px solid #eee;
+  margin-top: -1px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+
+@media (max-width: 960px) {
+  .addresses .table .line {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding-left: 24px;
+  }
+}
+
+.addresses .table .line p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.addresses .table .line span {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.addresses .table .line .code {
+  padding-left: 24px;
+  padding-right: 24px;
+  width: 50px;
+}
+
+@media (max-width: 960px) {
+  .addresses .table .line .code {
+    padding-left: 0;
+    padding-right: 0;
+    font-weight: 500;
+  }
+}
+
+.addresses .table .line .country {
+  width: 150px;
+}
+
+.addresses .table .line .address {
+  width: 250px;
+}
+
+.addresses .table .line .phone {
+  width: 250px;
+}
+
+.addresses .table .line .time {
+  width: 130px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+@media (max-width: 960px) {
+  .addresses .table .line .time {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.addresses .table .line:not(.head):hover {
+  background-color: #ddd;
+}
+
+.addresses .table .head {
+  font-size: 17px;
+  font-weight: normal;
+}
+
+@media (max-width: 960px) {
+  .addresses .table .head {
+    display: none;
+  }
+}
 /*# sourceMappingURL=page_list.css.map */
