--- a/styles/pages/page_list.scss
+++ b/styles/pages/page_list.scss
@@ -180,3 +180,155 @@
         }
     }
 }
+
+.indexJoinBlock {
+    position: relative;
+    margin-top: 50px;
+    .head {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        background: #fbfbfb;
+        h1,
+        p {
+            text-align: center;
+            justify-content: center;
+        }
+        h1 {
+            text-transform: uppercase;
+            font-size: 32px;
+            font-weight: bold;
+            margin-bottom: 0;
+            @media(max-width: 768px) {
+                font-size: larger;
+                line-height: 1.5;
+            }
+        }
+        p {
+            max-width: 900px;
+            line-height: 1.5;
+            font-size: 16px;
+        }
+    }
+    .withbg {
+        background: url(/static/images/photos/reg.jpg) no-repeat #000;
+        height: 610px;
+        max-height: 610px;
+        background-size: cover;
+        background-position: center;
+        margin-top: 0;
+        display: flex;
+        @media(max-width: 768px) {
+            max-height: 405px;
+        }
+        button {
+            border: 8px solid #fff;
+            padding: 16px 56px;
+            color: #fff;
+            font-size: 64px;
+            cursor: pointer;
+            font-family: "Bebas Neue" !important;
+            text-transform: uppercase;
+            text-align: center;
+            display: block;
+            margin-bottom: auto;
+            background: transparent;
+            font-weight: lighter;
+            margin: 0 auto;
+            margin-top: auto;
+            margin-bottom: auto;
+            font-weight: 100 !important;
+            transition: opacity.4s;
+            &:hover {
+                opacity: .6;
+            }
+            @media(max-width: 768px) {
+                font-size: 32px;
+                border: 4px solid #fff;
+                padding-bottom: 11px;
+            }
+        }
+    }
+}
+
+.addresses {
+    margin-top: 100px;
+    color: $blackText;
+    display: none;
+    .showAllOfficesTable {
+        color: rgb(48, 48, 48);
+        text-decoration: underline;
+        font-size: 14px;
+        font-weight: 500;
+        display: block;
+        text-align: center;
+        margin-top: 25px;
+    }
+    .table {
+        display: flex;
+        flex-direction: column;
+        .line {
+            font-size: 14px;
+            display: flex;
+            justify-content: space-between;
+            font-weight: lighter;
+            border: 1px solid #eee;
+            margin-top: -1px;
+            align-items: center;
+            transition: background.2s;
+            @media(max-width: 960px) {
+                flex-direction: column;
+                align-items: flex-start;
+                padding-left: 24px;
+            }
+            p {
+                display: flex;
+                flex-direction: column;
+            }
+            span {
+                display: block;
+                margin-bottom: 10px;
+            }
+            .code {
+                padding-left: 24px;
+                padding-right: 24px;
+                @media(max-width: 960px) {
+                    padding-left: 0;
+                    padding-right: 0;
+                    font-weight: 500;
+                }
+                width: 50px;
+            }
+            .country {
+                width: 150px;
+            }
+            .address {
+                width: 250px;
+            }
+            .phone {
+                width: 250px;
+            }
+            .time {
+                width: 130px;
+                padding-left: 24px;
+                padding-right: 24px;
+                @media(max-width: 960px) {
+                    padding-left: 0;
+                    padding-right: 0;
+                }
+            }
+            &:not(.head):hover {
+                background-color: #ddd;
+            }
+        }
+        .head {
+            font-size: 17px;
+            font-weight: normal;
+            @media(max-width: 960px) {
+                display: none;
+            }
+        }
+    }
+}
