--- a/styles/common/ModuleHeaderPC.scss
+++ b/styles/common/ModuleHeaderPC.scss
@@ -208,4 +208,60 @@ header.pc {
             }
         }
     }
+    .partner {
+        position: relative;
+        &:hover {
+            .consultant__popup {
+                display: block;
+            }
+        }
+    }
+    .consultant__popup {
+        margin-left: 15px;
+        border-radius: 10px;
+        overflow: hidden;
+        transition: height.2s;
+        cursor: pointer;
+        position: absolute;
+        right: 0;
+        width: 275px;
+        background: white;
+        border: 3px solid #eee;
+        z-index: 999;
+        padding: 15px;
+        display: none;
+        span {
+            padding-left: 5px;
+            opacity: .3;
+            font-style: italic;
+        }
+        a {
+            text-transform: none;
+            font-size: 14px;
+            line-height: normal;
+            color: $primaryGreenColor;
+            font-weight: 500;
+            text-decoration: none;
+            display: block;
+            margin-bottom: 10px;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+        p {
+            font-size: 14px;
+            line-height: 1.5;
+            &:first-child {
+                margin-top: 10px;
+            }
+            &.id {
+                margin-top: 20px;
+                margin-bottom: 5px;
+            }
+            &.name {
+                margin-top: 15px;
+                margin-bottom: 20px;
+            }
+        }
+    }
 }
