--- a/styles/common/ModuleFooterPC.css
+++ b/styles/common/ModuleFooterPC.css
@@ -391,4 +391,28 @@ footer .content .social__container-block .social__link:hover {
   opacity: .7;
   border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
+
+.footerFooter {
+  padding-top: 0px;
+  width: 92%;
+  margin: 0 auto;
+  border-top: 1px solid #eee;
+}
+
+.footerFooter p {
+  font-size: 14px;
+  color: #929292;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+}
+
+.footerFooter p:nth-child(2) {
+  margin-top: 10px;
+}
+
+.footerFooter p a {
+  text-decoration: none;
+  color: #74c044;
+}
 /*# sourceMappingURL=ModuleFooterPC.css.map */
