--- a/styles/common/ModuleFooterPC.scss
+++ b/styles/common/ModuleFooterPC.scss
@@ -281,3 +281,24 @@ footer {
         }
     }
 }
+
+.footerFooter {
+    padding-top: 0px;
+    width: 92%;
+    margin: 0 auto;
+    border-top: 1px solid #eee;
+    p {
+        font-size: 14px;
+        color: $grayText;
+        line-height: 1.6;
+        margin-bottom: 0;
+        text-align: center;
+        &:nth-child(2) {
+            margin-top: 10px;
+        }
+        a {
+            text-decoration: none;
+            color: $primaryGreenColor;
+        }
+    }
+}
