--- a/styles/pages/page_order.css
+++ b/styles/pages/page_order.css
@@ -10,6 +10,15 @@ body {
   position: relative;
 }
 
+@media (max-width: 768px) {
+  .container.order {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
 .left-column {
   width: calc(63% - 80px);
   padding: 50px 40px;
@@ -73,6 +82,7 @@ body {
     font-size: 14px;
     text-align: center;
     margin-top: 10px;
+    position: static;
   }
 }
 
@@ -88,6 +98,19 @@ body {
 
 .left-column p.selected {
   margin-top: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.left-column p.selected img {
+  width: 18px;
+  margin-left: 8px;
+  height: 18px;
+  cursor: pointer;
 }
 
 .left-column .modify_input {
@@ -165,17 +188,241 @@ body {
   width: 50%;
 }
 
+.attention {
+  padding: 5px 15px;
+  background: #f9f9f9;
+  border-radius: 9px;
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  -webkit-transition: height 0.5s, margin 0.5s, padding 0.5s;
+  transition: height 0.5s, margin 0.5s, padding 0.5s;
+}
+
+.attention p {
+  line-height: 1.35;
+}
+
+.attention.hidden {
+  height: 0px !important;
+  padding-bottom: 0px !important;
+  padding-top: 0px !important;
+  margin: 0px !important;
+}
+
+.attention .close {
+  font-size: 18px;
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  border-radius: 50%;
+  background: #e6e6e6;
+  width: 22px;
+  height: 22px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+
+.attention .close:hover {
+  background: #d1d1d1;
+}
+
 .right-column {
   position: -webkit-sticky;
   position: sticky;
   top: 150px;
-  width: calc(35% - 80px);
-  padding: 50px 40px;
+  width: calc(40% - 0px);
   max-width: 460px;
   background: #fff;
   margin-left: auto;
   height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content;
+  color: #323232;
+}
+
+.right-column .head-price {
+  padding-bottom: 0px;
+  border-bottom: 1px solid #e9e9e9;
+}
+
+.right-column p.count_product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.right-column p.count_product img {
+  width: 18px;
+  margin-left: 8px;
+  height: 18px;
+  cursor: pointer;
+}
+
+.right-column .pay_del {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
+}
+
+.right-column .pay_del .title {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+  color: #282f36;
+}
+
+.right-column .pay_del .delivery span {
+  font-weight: bold;
+}
+
+.right-column .pay_del .payment {
+  margin-top: -5px;
+}
+
+.right-column .result_price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  line-height: 60px;
+}
+
+@media (max-width: 1480px) {
+  .right-column .result_price {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 768px) {
+  .right-column .result_price {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+.right-column .result_price p.res {
+  font-size: 20px;
+  margin-top: 32px;
+}
+
+.right-column .result_price p.price {
+  font-size: 48px;
+  font-weight: bold;
+  margin-left: 20px;
+  white-space: nowrap;
+}
+
+@media (max-width: 1480px) {
+  .right-column .result_price p.price {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 1310px) {
+  .right-column .result_price p.price {
+    font-size: 38px;
+    margin-top: -15px;
+  }
+}
+
+@media (max-width: 1130px) {
+  .right-column .result_price p.price {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 1050px) {
+  .right-column .result_price p.price {
+    margin-left: 20px;
+    margin-top: -25px;
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 910px) {
+  .right-column .result_price p.price {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .right-column .result_price p.price {
+    margin-top: 40px;
+    margin-left: auto;
+  }
+}
+
+@media (max-width: 370px) {
+  .right-column .result_price p.price {
+    font-size: 22px;
+    margin-top: 35px;
+  }
+}
+
+@media (max-width: 768px) {
+  .right-column {
+    width: calc(100% - 0px);
+    margin-left: unset;
+    max-width: unset;
+    margin-bottom: 30px;
+    position: static;
+  }
+}
+
+.right-column button {
+  width: calc(100%);
+  height: 60px;
+  border: none;
+  margin-top: 10px;
+  text-transform: uppercase;
+  font-weight: 500;
+  color: #fff;
+  font-size: 16px;
+  background: #74c044;
+  cursor: pointer;
+}
+
+@media (max-width: 370px) {
+  .right-column button {
+    width: 100%;
+  }
+}
+
+.right-column p.privacy {
+  font-size: 12px;
+  margin-top: 25px;
+  padding-bottom: 20px;
+  line-height: 1.4;
+}
+
+.right-column p.privacy a {
+  color: currentColor;
 }
 /*# sourceMappingURL=page_order.css.map */
