--- a/styles/pages/page_terms.css
+++ b/styles/pages/page_terms.css
@@ -2,6 +2,25 @@ body {
   background: #fbfbfb;
 }
 
+.reg-container {
+  max-width: 1040px;
+  margin: 0 auto;
+  color: #323232;
+  font-family: 'Roboto', 'Gotham Pro';
+}
+
+.reg-container h4 {
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.reg-container p {
+  padding: 10px 0;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+}
+
 .faq {
   display: -webkit-box;
   display: -ms-flexbox;
