--- a/styles/pages/page_terms.scss
+++ b/styles/pages/page_terms.scss
@@ -3,6 +3,23 @@ body {
     background: rgb(251, 251, 251);
 }
 
+.reg-container {
+    max-width: 1040px;
+    margin: 0 auto;
+    color: $blackText;
+    font-family: 'Roboto', 'Gotham Pro';
+    h4 {
+        font-size: 20px;
+        line-height: 24px;
+    }
+    p {
+        padding: 10px 0;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 32px;
+    }
+}
+
 .faq {
     display: flex;
     flex-direction: column;
