--- a/styles/pages/page_order.css
+++ b/styles/pages/page_order.css
@@ -13,9 +13,9 @@ body {
 @media (max-width: 768px) {
   .container.order {
     -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -107,10 +107,11 @@ body {
 }
 
 .left-column p.selected img {
-  width: 18px;
+  width: 16px;
   margin-left: 8px;
-  height: 18px;
+  height: 16px;
   cursor: pointer;
+  margin-top: -5px;
 }
 
 .left-column .modify_input {
@@ -273,10 +274,11 @@ body {
 }
 
 .right-column p.count_product img {
-  width: 18px;
+  width: 16px;
   margin-left: 8px;
-  height: 18px;
+  height: 16px;
   cursor: pointer;
+  margin-top: -5px;
 }
 
 .right-column .pay_del {
@@ -391,7 +393,7 @@ body {
     width: calc(100% - 0px);
     margin-left: unset;
     max-width: unset;
-    margin-bottom: 30px;
+    margin-top: 30px;
     position: static;
   }
 }
@@ -424,5 +426,12 @@ body {
 
 .right-column p.privacy a {
   color: currentColor;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 /*# sourceMappingURL=page_order.css.map */
