--- a/styles/pages/page_faq.css
+++ b/styles/pages/page_faq.css
@@ -49,9 +49,9 @@ body {
 @media (max-width: 890px) {
   .support-content {
     -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
     padding: 0;
     margin-top: 20px;
   }
@@ -133,7 +133,7 @@ body {
 @media (max-width: 890px) {
   .support-content .answer {
     width: calc(100% - 40px);
-    margin-top: 40px;
+    margin-bottom: 40px;
     padding: 10px 20px;
   }
 }
