--- a/styles/pages/page_faq.scss
+++ b/styles/pages/page_faq.scss
@@ -32,7 +32,7 @@ body {
     margin: 0 auto;
     display: flex;
     @media(max-width: 890px) {
-        flex-direction: column;
+        flex-direction: column-reverse;
         padding: 0;
         margin-top: 20px;
     }
@@ -92,7 +92,7 @@ body {
         color: $blackText;
         @media(max-width: 890px) {
             width: calc(100% - 40px);
-            margin-top: 40px;
+            margin-bottom: 40px;
             padding: 10px 20px;
         }
         h1 {
