--- a/styles/pages/page_order.scss
+++ b/styles/pages/page_order.scss
@@ -8,7 +8,7 @@ body {
     margin-top: 10px;
     position: relative;
     @media(max-width: 768px) {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 }
 
@@ -74,10 +74,11 @@ body {
         display: flex;
         align-items: center;
         img {
-            width: 18px;
+            width: 16px;
             margin-left: 8px;
-            height: 18px;
+            height: 16px;
             cursor: pointer;
+            margin-top: -5px;
         }
     }
     .modify_input {
@@ -203,10 +204,11 @@ body {
         display: flex;
         align-items: center;
         img {
-            width: 18px;
+            width: 16px;
             margin-left: 8px;
-            height: 18px;
+            height: 16px;
             cursor: pointer;
+            margin-top: -5px;
         }
     }
     .pay_del {
@@ -278,7 +280,7 @@ body {
         width: calc(100% - 0px);
         margin-left: unset;
         max-width: unset;
-        margin-bottom: 30px;
+        margin-top: 30px;
         position: static;
     }
     button {
@@ -304,5 +306,12 @@ body {
         a {
             color: currentColor;
         }
+    }
+}
+
+.container {
+    @media(max-width: 768px) {
+        padding-left: 5px;
+        padding-right: 5px;
     }
 }
