--- a/styles/pages/page_terms.css
+++ b/styles/pages/page_terms.css
@@ -6,12 +6,12 @@ body {
   max-width: 1040px;
   margin: 0 auto;
   color: #323232;
-  font-family: 'Roboto', 'Gotham Pro';
 }
 
 .reg-container h4 {
   font-size: 20px;
   line-height: 24px;
+  margin-bottom: 0;
 }
 
 .reg-container p {
@@ -19,6 +19,8 @@ body {
   font-size: 20px;
   font-weight: 400;
   line-height: 32px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .faq {
