--- a/styles/pages/page_terms.scss
+++ b/styles/pages/page_terms.scss
@@ -7,16 +7,18 @@ body {
     max-width: 1040px;
     margin: 0 auto;
     color: $blackText;
-    font-family: 'Roboto', 'Gotham Pro';
     h4 {
         font-size: 20px;
         line-height: 24px;
+        margin-bottom: 0;
     }
     p {
         padding: 10px 0;
         font-size: 20px;
         font-weight: 400;
         line-height: 32px;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 }
 
