--- a/styles/common/ModuleFooterPC.css
+++ b/styles/common/ModuleFooterPC.css
@@ -400,8 +400,8 @@ footer .content .social__container-block .social__link:hover {
 }
 
 .footerFooter-pc p {
-  font-size: 14px;
-  color: #929292;
+  font-size: 12px;
+  color: #7a7a7a;
   line-height: 1.6;
   margin-bottom: 0;
   text-align: center;
