--- a/styles/common/ModuleFooterPC.scss
+++ b/styles/common/ModuleFooterPC.scss
@@ -288,8 +288,8 @@ footer {
     margin: 0 auto;
     border-top: 1px solid #eee;
     p {
-        font-size: 14px;
-        color: $grayText;
+        font-size: 12px;
+        color: #7a7a7a;
         line-height: 1.6;
         margin-bottom: 0;
         text-align: center;
