--- a/styles/common/PopupLanguage.scss
+++ b/styles/common/PopupLanguage.scss
@@ -28,13 +28,17 @@
         margin-bottom: 0;
     }
     select {
-        width: 280px;
+        @media(min-width: 768px) {
+            width: 280px;
+        }
+        width: 100%;
         height: 40px;
         border: 1px solid #eee;
         font-size: 14px;
         margin-top: 10px;
         padding-left: 10px;
         max-width: 100%;
+        background: white;
     }
     button {
         display: block;
