--- a/styles/common/PopupSearchMob.css
+++ b/styles/common/PopupSearchMob.css
@@ -35,4 +35,89 @@
   border-radius: 50px;
   font-size: 17px;
 }
+
+.search-popup .container {
+  width: calc(100% - 40px) !important;
+  margin: 0 auto;
+}
+
+.search-popup .input-container {
+  margin-top: 60px;
+  border-radius: 8px;
+  border: 1px solid #eee;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-popup .input-container input {
+  height: 40px;
+  width: calc(100% - 60px);
+  border: none;
+  margin-left: 5px;
+  font-size: 14px;
+  padding-left: 10px;
+}
+
+.search-popup .input-container button {
+  background: white;
+  border: none;
+  height: 40px;
+  width: 60px;
+  font-size: 16px;
+  text-align: center;
+  opacity: .7;
+  border-radius: 50px;
+}
+
+.search-popup .icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 5px;
+}
+
+.search-popup .icons .search-block {
+  width: 122px;
+  height: 92px;
+  border-radius: 8px;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: #f5f5f5;
+  margin-top: 15px;
+}
+
+.search-popup .icons .search-block i {
+  font-size: 24px;
+  margin-top: 15px;
+  color: #444444;
+}
+
+.search-popup .icons .search-block p {
+  font-size: 14px;
+}
+
+.search-popup .icons .search-block p.mini {
+  font-size: 12px;
+}
 /*# sourceMappingURL=PopupSearchMob.css.map */
