--- a/styles/common/PopupSearchMob.scss
+++ b/styles/common/PopupSearchMob.scss
@@ -26,4 +26,63 @@
         border-radius: 50px;
         font-size: 17px;
     }
+    .container {
+        width: calc(100% - 40px) !important;
+        margin: 0 auto;
+    }
+    .input-container {
+        margin-top: 60px;
+        border-radius: 8px;
+        border: 1px solid #eee;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        input {
+            height: 40px;
+            width: calc(100% - 60px);
+            border: none;
+            margin-left: 5px;
+            font-size: 14px;
+            padding-left: 10px;
+        }
+        button {
+            background: white;
+            border: none;
+            height: 40px;
+            width: 60px;
+            font-size: 16px;
+            text-align: center;
+            opacity: .7;
+            border-radius: 50px;
+        }
+    }
+    .icons {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        margin-top: 5px;
+        .search-block {
+            width: 122px;
+            height: 92px;
+            border-radius: 8px;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            background: #f5f5f5;
+            margin-top: 15px;
+            i {
+                font-size: 24px;
+                margin-top: 15px;
+                color: rgb(68, 68, 68);
+            }
+            p {
+                font-size: 14px;
+                &.mini {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
 }
