--- a/styles/common/ModuleFooterMob.css
+++ b/styles/common/ModuleFooterMob.css
@@ -172,10 +172,16 @@ footer.mobile .footerSocial {
 
 footer.mobile .footerSocial .logo {
   width: 55%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
 }
 
 footer.mobile .footerSocial .logo img {
-  width: 100%;
+  height: 40px;
 }
 
 footer.mobile .footerSocial .social {
