--- a/styles/common/ModuleFooterMob.scss
+++ b/styles/common/ModuleFooterMob.scss
@@ -135,8 +135,10 @@ footer.mobile {
         align-items: center;
         .logo {
             width: 55%;
+            display: flex;
+            justify-content: start;
             img {
-                width: 100%;
+                height: 40px;
             }
         }
         .social {
