--- a/styles/common/ModuleHeaderMob.css
+++ b/styles/common/ModuleHeaderMob.css
@@ -331,12 +331,11 @@ header.mobile .mobile-menu .consultant-info .consultant-line.main {
 }
 
 header.mobile .mobile-menu .consultant-info .consultant-line h1 {
-  font-weight: bold;
-  font-size: 14px;
-  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 16px;
   margin: 0;
   line-height: 24px;
-  color: #74c044;
+  color: #323232;
   position: relative;
   display: block;
   width: 100%;
