--- a/styles/common/ModuleHeaderMob.scss
+++ b/styles/common/ModuleHeaderMob.scss
@@ -243,12 +243,11 @@ header.mobile {
                 padding-left: 15px;
                 padding-right: 15px;
                 h1 {
-                    font-weight: bold;
-                    font-size: 14px;
-                    text-transform: uppercase;
+                    font-weight: 400;
+                    font-size: 16px;
                     margin: 0;
                     line-height: 24px;
-                    color: $primaryGreenColor;
+                    color: #323232;
                     position: relative;
                     display: block;
                     width: 100%;
