--- a/styles/pages/page_consultant.css
+++ b/styles/pages/page_consultant.css
@@ -2,6 +2,48 @@ body {
   background: #f7f7f7;
 }
 
+body.dark {
+  background: #323232;
+  color: white;
+}
+
+body.dark .avatar {
+  -webkit-box-shadow: 0px 10px 30px 0px rgba(12, 12, 12, 0.5);
+          box-shadow: 0px 10px 30px 0px rgba(12, 12, 12, 0.5);
+}
+
+i.far.fa-moon {
+  position: absolute;
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-shadow: inset 0px 10px 25px -7px #1d1d1d;
+          box-shadow: inset 0px 10px 25px -7px #1d1d1d;
+  background: #333;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+  right: 24px;
+  top: 24px;
+}
+
+body:not(.dark) i.far.fa-moon {
+  -webkit-box-shadow: 0px 10px 25px -7px #c9c9c9;
+          box-shadow: 0px 10px 25px -7px #c9c9c9;
+  background: white;
+  color: #5d5d5d;
+}
+
 .content_block {
   max-width: 911px;
   margin: 0 auto;
@@ -107,6 +149,7 @@ body {
   cursor: pointer;
   -webkit-transition: color 0.2s;
   transition: color 0.2s;
+  color: #323232;
 }
 
 @media (max-width: 660px) {
