--- a/styles/pages/page_consultant.scss
+++ b/styles/pages/page_consultant.scss
@@ -1,6 +1,37 @@
 @import "../common/vars.scss";
 body {
     background: #f7f7f7;
+    &.dark {
+        background: #323232;
+        color: white;
+        .avatar {
+            box-shadow: 0px 10px 30px 0px rgba(12, 12, 12, 0.5);
+        }
+    }
+}
+
+i.far.fa-moon {
+    position: absolute;
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: inset 0px 10px 25px -7px #1d1d1d;
+    background: #333;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    right: 24px;
+    top: 24px;
+}
+
+body:not(.dark) i.far.fa-moon {
+    box-shadow: 0px 10px 25px -7px #c9c9c9;
+    background: white;
+    color: #5d5d5d;
 }
 
 .content_block {
@@ -76,6 +107,7 @@ body {
         align-items: center;
         cursor: pointer;
         transition: color.2s;
+        color: $blackText;
         @media(max-width: 660px) {
             margin-bottom: 15px;
         }
