--- a/styles/pages/page_terms.css
+++ b/styles/pages/page_terms.css
@@ -103,11 +103,13 @@ body {
   font-family: Roboto, Calibri, sans-serif;
   font-size: 20px;
   font-weight: 300;
-  line-height: 1.8;
+  line-height: 1.3;
   font-weight: bold;
   text-transform: uppercase;
-  padding: 22px 0;
+  padding: 10px 0;
+  padding-top: 0;
   border-bottom: 1px solid #cdcdcd;
+  margin-top: 10px;
   position: relative;
 }
 
