--- a/styles/pages/page_index.css
+++ b/styles/pages/page_index.css
@@ -344,7 +344,8 @@
 
 @media (max-width: 768px) {
   .indexJoinBlock .head h1 {
-    font-size: larger;
+    font-weight: 500;
+    font-size: 1.4em;
     line-height: 1.5;
   }
 }
@@ -353,6 +354,14 @@
   max-width: 630px;
   line-height: 1.5;
   font-size: 16px;
+}
+
+@media (max-width: 768px) {
+  .indexJoinBlock .head p {
+    font-size: 14px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
 
 .indexJoinBlock .withbg {
