--- a/styles/pages/page_index.scss
+++ b/styles/pages/page_index.scss
@@ -233,7 +233,8 @@
             font-size: 32px;
             margin-bottom: 0;
             @media(max-width: 768px) {
-                font-size: larger;
+                font-weight: 500;
+                font-size: 1.4em;
                 line-height: 1.5;
             }
         }
@@ -241,6 +242,11 @@
             max-width: 630px;
             line-height: 1.5;
             font-size: 16px;
+            @media(max-width: 768px) {
+                font-size: 14px;
+                margin-left: 5px;
+                margin-right: 5px;
+            }
         }
     }
     .withbg {
