--- a/landings/styles/page_eco.scss
+++ b/landings/styles/page_eco.scss
@@ -11,6 +11,10 @@
             background: url(/landings/images/eco-1.jpg) 70%;
             background-size: cover;
         }
+        &.eco-2 {
+            background: url(/landings/images/eco-2.jpg) 70%;
+            background-size: cover;
+        }
     }
     .content {
         padding: 80px 30px 30px 60px;
@@ -28,8 +32,22 @@
             .swiper-wrapper {
                 width: 100%;
                 min-height: 440px;
-                max-height: 600px;
-                height: 65vh;
+                max-height: 700px;
+                height: 66vh;
+            }
+        }
+        .textSwiperS {
+            width: 50%;
+            margin-left: 0;
+            position: relative;
+            .swiper-wrapper {
+                width: 100%;
+                min-height: 440px;
+                max-height: 810px;
+                height: 160vh;
+                .swiper-slide {
+                    height: unset;
+                }
             }
         }
         .swiper-slide {
@@ -46,4 +64,57 @@
             }
         }
     }
+    button {
+        position: absolute;
+        left: 50px;
+        bottom: 5%;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 3px;
+        border-radius: 30px;
+        height: 38px;
+        width: 200px;
+        border: none;
+        background: #fff;
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+        text-transform: uppercase;
+        color: $blackText;
+        font-size: 12px;
+        letter-spacing: 0.08em;
+        cursor: pointer;
+        transition: color.2s;
+        z-index: 9999999;
+        svg {
+            height: 10px;
+            width: 10px;
+            fill: $primaryGreenColor;
+            margin-right: 15px;
+            transition: transform.3s;
+            padding-top: 1px;
+        }
+        &:hover {
+            color: $primaryGreenColor;
+            svg {
+                transform: translateX(5px);
+            }
+        }
+    }
+}
+
+.screen {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    z-index: -1;
+    &:last-child {
+        top: 100%;
+    }
+}
+
+footer {
+    width: calc(100% + 30px) !important;
+    margin-left: -30px;
+    margin-top: 80px;
 }
