Eco page mobile

--- a/landings/styles/common.css
+++ b/landings/styles/common.css
@@ -2,6 +2,12 @@ body {
   margin: 0 auto;
 }
 
+@media (max-width: 768px) {
+  .breadcrumb {
+    padding-left: 15px;
+  }
+}
+
 header.landing_pc {
   width: 81px;
   height: 100%;
@@ -14,6 +20,13 @@ header.landing_pc {
       -ms-flex-direction: column;
           flex-direction: column;
   position: fixed;
+}
+
+@media (max-width: 768px) {
+  header.landing_pc {
+    visibility: hidden;
+    display: none;
+  }
 }
 
 header.landing_pc .logo {
@@ -234,6 +247,19 @@ header.landing_pc .openPopupJB .topRightButton__icon {
   padding-left: 110px;
   width: calc(100% - 140px);
   max-width: 1530px;
+  z-index: -99;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+.categories {
+  display: none;
 }
 
 @-webkit-keyframes rotate {
