--- a/landings/styles/common.scss
+++ b/landings/styles/common.scss
@@ -3,6 +3,12 @@ body {
     margin: 0 auto;
 }
 
+@media(max-width: 768px) {
+    .breadcrumb {
+        padding-left: 15px;
+    }
+}
+
 header.landing_pc {
     width: 81px;
     height: 100%;
@@ -10,7 +16,10 @@ header.landing_pc {
     display: flex;
     flex-direction: column;
     position: fixed;
-    @media(max-width: 768px) {}
+    @media(max-width: 768px) {
+        visibility: hidden;
+        display: none;
+    }
     .logo {
         width: 80px;
         height: 80px;
@@ -173,6 +182,16 @@ header.landing_pc {
     padding-left: 110px;
     width: calc(100% - 140px);
     max-width: 1530px;
+    z-index: -99;
+    @media(max-width: 768px) {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.categories {
+    display: none;
 }
 
 @keyframes rotate {
