--- a/landings/styles/page_eco.scss
+++ b/landings/styles/page_eco.scss
@@ -15,15 +15,32 @@
             background: url(/landings/images/eco-2.jpg) 70%;
             background-size: cover;
         }
+        @media(max-width: 768px) {
+            width: calc(100% - 30px);
+            position: static;
+            height: 250px;
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-end;
+            padding-bottom: 30px;
+            padding-left: 30px;
+        }
     }
     .content {
         padding: 80px 30px 30px 60px;
         color: $blackText;
+        @media(max-width: 768px) {
+            padding-left: 15px;
+            padding-right: 15px;
+        }
         p.subtitle {
             font-weight: 500;
             font-size: 16px;
             margin-left: -64px;
             margin-top: 24px;
+            @media(max-width: 768px) {
+                margin-left: 0;
+            }
         }
         .textSwiperF {
             width: 50%;
@@ -34,6 +51,21 @@
                 min-height: 440px;
                 max-height: 700px;
                 height: 66vh;
+                .swiper-slide {
+                    height: unset;
+                }
+                @media(max-width: 768px) {
+                    max-height: unset;
+                    height: unset;
+                }
+            }
+            @media(max-width: 768px) {
+                width: 100%;
+            }
+            .swiper-scrollbar {
+                @media(max-width: 768px) {
+                    display: none;
+                }
             }
         }
         .textSwiperS {
@@ -48,6 +80,18 @@
                 .swiper-slide {
                     height: unset;
                 }
+                @media(max-width: 768px) {
+                    max-height: unset;
+                    height: unset;
+                }
+            }
+            @media(max-width: 768px) {
+                width: 100%;
+            }
+            .swiper-scrollbar {
+                @media(max-width: 768px) {
+                    display: none;
+                }
             }
         }
         .swiper-slide {
@@ -56,6 +100,9 @@
                 line-height: 1.1;
                 font-weight: bold;
                 padding-right: 30px;
+                @media(max-width: 768px) {
+                    font-size: 32px;
+                }
             }
             p {
                 line-height: 2;
@@ -85,7 +132,6 @@
         letter-spacing: 0.08em;
         cursor: pointer;
         transition: color.2s;
-        z-index: 9999999;
         svg {
             height: 10px;
             width: 10px;
@@ -100,6 +146,11 @@
                 transform: translateX(5px);
             }
         }
+        @media(max-width: 768px) {
+            left: 20px;
+            bottom: 20px;
+            position: static;
+        }
     }
 }
 
@@ -107,14 +158,23 @@
     position: absolute;
     height: 100%;
     top: 0;
-    z-index: -1;
+    z-index: -99;
+    @media(max-width: 768px) {
+        position: static;
+        margin-top: 20px;
+    }
     &:last-child {
         top: 100%;
     }
 }
 
 footer {
-    width: calc(100% + 30px) !important;
-    margin-left: -30px;
-    margin-top: 80px;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: calc(100% - 30px) !important;
+    @media(min-width: 768px) {
+        margin-left: -30px;
+        margin-top: 80px;
+        width: calc(100%) !important;
+    }
 }
