--- a/landings/styles/page_eco.scss
+++ b/landings/styles/page_eco.scss
@@ -1,180 +1,37 @@
-@import "../../styles/common/vars.scss";
-.eco-slide {
-    .main_img {
-        position: absolute;
-        right: 0;
-        height: 100%;
-        width: 43%;
-        top: 0;
-        z-index: -1;
-        &.eco-1 {
-            background: url(/landings/images/eco-1.jpg) 70%;
-            background-size: cover;
-        }
-        &.eco-2 {
-            background: url(/landings/images/eco-2.jpg) 70%;
-            background-size: cover;
-        }
-        @media(max-width: 768px) {
-            width: calc(100% - 30px);
-            position: static;
-            height: 250px;
-            display: flex;
-            justify-content: flex-start;
-            align-items: flex-end;
-            padding-bottom: 30px;
-            padding-left: 30px;
-        }
-    }
-    .content {
-        padding: 80px 30px 30px 60px;
-        color: $blackText;
-        @media(max-width: 768px) {
-            padding-left: 15px;
-            padding-right: 15px;
-        }
-        p.subtitle {
-            font-weight: 500;
-            font-size: 16px;
-            margin-left: -64px;
-            margin-top: 24px;
-            @media(max-width: 768px) {
-                margin-left: 0;
-            }
-        }
-        .textSwiperF {
-            width: 50%;
-            margin-left: 0;
-            position: relative;
-            .swiper-wrapper {
-                width: 100%;
-                min-height: 440px;
-                max-height: 700px;
-                height: 66vh;
-                .swiper-slide {
-                    height: unset;
-                }
-                @media(max-width: 768px) {
-                    max-height: unset;
-                    height: unset;
-                }
-            }
-            @media(max-width: 768px) {
-                width: 100%;
-            }
-            .swiper-scrollbar {
-                @media(max-width: 768px) {
-                    display: none;
-                }
-            }
-        }
-        .textSwiperS {
-            width: 50%;
-            margin-left: 0;
-            position: relative;
-            .swiper-wrapper {
-                width: 100%;
-                min-height: 440px;
-                max-height: 810px;
-                height: 160vh;
-                .swiper-slide {
-                    height: unset;
-                }
-                @media(max-width: 768px) {
-                    max-height: unset;
-                    height: unset;
-                }
-            }
-            @media(max-width: 768px) {
-                width: 100%;
-            }
-            .swiper-scrollbar {
-                @media(max-width: 768px) {
-                    display: none;
-                }
-            }
-        }
-        .swiper-slide {
-            h1 {
-                font-size: 80px;
-                line-height: 1.1;
-                font-weight: bold;
-                padding-right: 30px;
-                @media(max-width: 768px) {
-                    font-size: 32px;
-                }
-            }
-            p {
-                line-height: 2;
-                font-size: 16px;
-                padding-right: 30px;
-            }
-        }
-    }
-    button {
-        position: absolute;
-        left: 50px;
-        bottom: 5%;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 3px;
-        border-radius: 30px;
-        height: 38px;
-        width: 200px;
-        border: none;
-        background: #fff;
-        display: flex;
-        align-items: center;
-        font-weight: 600;
-        text-transform: uppercase;
-        color: $blackText;
-        font-size: 12px;
-        letter-spacing: 0.08em;
-        cursor: pointer;
-        transition: color.2s;
-        svg {
-            height: 10px;
-            width: 10px;
-            fill: $primaryGreenColor;
-            margin-right: 15px;
-            transition: transform.3s;
-            padding-top: 1px;
-        }
-        &:hover {
-            color: $primaryGreenColor;
-            svg {
-                transform: translateX(5px);
-            }
-        }
-        @media(max-width: 768px) {
-            left: 20px;
-            bottom: 20px;
-            position: static;
-        }
-    }
-}
-
-.screen {
-    position: absolute;
+html,
+body {
+    position: relative;
     height: 100%;
-    top: 0;
-    z-index: -99;
-    @media(max-width: 768px) {
-        position: static;
-        margin-top: 20px;
-    }
-    &:last-child {
-        top: 100%;
-    }
 }
 
-footer {
-    padding-left: 15px;
-    padding-right: 15px;
-    width: calc(100% - 30px) !important;
-    @media(min-width: 768px) {
-        margin-left: -30px;
-        margin-top: 80px;
-        width: calc(100%) !important;
-    }
+body {
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #000;
+    margin: 0;
+    padding: 0;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: transparent;
+}
+
+.swiper-slide {
+    font-size: 18px;
+    background: #fff;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.pageSwiper {
+    margin-left: 130px;
+    width: calc(100% - 130px);
 }
